<resources>
    <string name="app_name">DataLab</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Enter Email Address</string>
    <string name="password">Enter Password</string>
    <string name="login">Login</string>
    <string name="SHARED_PREFS">com.example.robertgillis.datalab.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="action_logout">Logout</string>
    <string name="ACCT_FILE">com.example.robertgillis.datalab.ACCT_FILE</string>
    <string name="delete">Delete</string>
    <string name="reset_pwd">Reset Password</string>
    <string name="new_password">Enter New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="reset_button">Reset</string>
</resources>
